ckanext/ngds/ngdsui/public/css/default.css
/* ... */
div#content-container section.search-results div.search-results-container div.search-results-item a.title {
	display:table-caption;
}

div#content-container section.search-results div.search-results-container div.search-results-item div.search-results-meta {
	display:table-cell;
	width:50%;
	padding-top:10px;
}

div#content-container section.search-results div.search-results-container div.search-results-item div.search-results-actions {
	display:table-cell;
	width:50%;
}

div#content-container section.search-results div.search-results-container div.search-results-item .regular-meta-item {
	margin-top:5px;
	margin-bottom:5px;
	font-size:13px;
}

div#content-container section.search-results div.search-results-container div.search-results-item div.search-results-meta .spaced {
	/*padding-top:10px;*/
}

div#content-container section.search-results div.search-results-container .search-results-num-pages {
	font-size:14px;
}

div#content-container section.search-results div.search-results-container div.search-results-pagination {
	margin-top:25px;
}

div#content-container section.search-results div.search-results-container div.search-results-pagination p {
	display:inline;
}

div#content-container section.search-results div.search-results-container div.search-results-pagination div.search-results-page-nums {
	margin-left:20px;
	display:inline;
}

div#content-container section.search-results div.search-results-container div.search-results-pagination div.search-results-page-nums a {
	font-size:13px;
	margin-left:5px;
	margin-right:5px;
}

div#content-container section.search-results div.search-results-container div.search-results-pagination div.search-results-num-items {
	display:inline;
	float:right;
	margin-left:20px;
}

div#content-container section.search-results div.search-results-container div.search-results-pagination div.search-results-num-items select {
	width:50px;
	margin-left:10px;
}

div#content-container section.search-results div.search-results-container div.search-results-pagination div.search-results-num-items p {
	font-size:14px;
}

.action-item-spaced {
	margin-left:25px;
}

div.postface {

}

div.postface div.left {
	float:left;
	margin-top:5px;
}

div.postface div.right {
	position:relative;
	margin-top:5px;
	display:table;
	float:right;
	width:320px;
}

div.postface div.left p {
	margin-top:0px;
	margin-left:15px;
	font-family:Arial;
	font-size:10px;
}

div.postface div.right a {
	font-family:Arial;
	font-size:10px;
	text-decoration:none;
	text-align:left;
}

div.postface div.right .center {
	text-align:center;
	padding-left:30px;
}

div.postface div.right .left {
	text-align:left;
}

div.postface div.right .right {
	text-align:right;
}

div.postface div.right span {
	display:inline;
	display:table-cell;
}

div.map-search {
	background-color:#dadada;
	height:120px;
	width:320px;
	border-radius:5px;
	padding-top:5px;
}

div.map-search span.left {
	margin-left:15px;
}

div.map-search p.map-search-desc {
	margin-left:15px;
	font-family:Arial;
	font-size:12px; 
	margin-bottom:5px;
}

div.map-search input[type="text"] {
	margin-left:15px;
	width:220px;
	font-family:Arial;
	font-size:20px;
}

div.map-search input[type="submit"] {
	font-family:Arial;
	font-size:20px;
	width:50px;
	height:30px;
	margin-left:10px;
}

